# merkle-tree-benchmark

./: .gitignore  README.MD  run_benchmarks.sh
JS/benchmarks/: benchmark.mjs
JS/benchmarks/EtheriumJs/Mpt/: benchmark.js
JS/benchmarks/EtheriumJs/Verkle/: benchmark.js
JS/benchmarks/OppenZeppelin/: benchmark.js
Rust/Fuel/: Cargo.toml
Rust/Fuel/src/: merkle.rs  sparse.rs
benchmark/: .gitignore  package.json  pnpm-lock.yaml  run_benchmarks.sh
benchmark/Fuel/: Cargo.toml
benchmark/Fuel/benches/: bench.rs
benchmark/Fuel/src/: bench.rs  main.rs  sparse.rs
benchmark/benchmarks/: benchmark.mjs
benchmark/benchmarks/EtheriumJs/Mpt/: benchmark.js
benchmark/benchmarks/EtheriumJs/Verkle/: benchmark.js
benchmark/benchmarks/MerkleTreeJs/: benchmark.js
benchmark/benchmarks/OppenZeppelin/: benchmark.js
