# Cargo.toml
[package]
name = "Fuel"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.4"
rand = "0.8"
sha2 = "0.10"
fuel-merkle = { git = "https://github.com/FuelLabs/fuel-vm", package = "fuel-merkle", branch = "master" }

[[bench]]
name = "bench"
harness = false

[dependencies]
criterion = "0.4"
fuel-merkle = { git = "https://github.com/FuelLabs/fuel-vm", package = "fuel-merkle", branch = "master" }
hex = "0.4"
sha2 = "0.10"
rand = "0.8"